@@ -351,16 +351,6 @@ table.align-right {
   width: 40%;
 }
 
-/* Math */
-/* for math-output=MathML (for math-output=HTML, see math.css) */
-math .boldsymbol {
-  font-weight: bold;
-}
-mstyle.mathscr, mi.mathscr {
-  font-family: STIX, XITSMathJax_Script, rsfs10,
-               "Asana Math", Garamond, cursive;
-}
-
 /* Adaptive page layout */
 /* ==================== */
 
