@@ -392,7 +392,7 @@ physical system changes in time.</p>
 <span class="docutils literal">align</span> environment:</p>
 <div>
 <math xmlns="http://www.w3.org/1998/Math/MathML" display="block">
-  <mtable class="align" displaystyle="true" columnalign="right left" columnspacing="0">
+  <mtable class="ams-align" displaystyle="true">
     <mtr>
       <mtd>
         <msub>
@@ -468,7 +468,7 @@ physical system changes in time.</p>
   <mo>=</mo>
   <mrow>
     <mo rspace="0.17em">{</mo>
-    <mtable columnalign="left">
+    <mtable columnalign="left" class="cases">
       <mtr>
         <mtd>
           <mo>−</mo>
