@@ -97,6 +97,9 @@ Changes since 0.20.1
   - Elimitate side-effect of importing "latex2mathml" on "tex2unichar".
   - Sort ℏ (`\hslash`) as "mathord", not "mathalpha".
   - Use MathML element <mi> instead of <mo> for character class "mathord".
+  - Use CSS rules instead of the deprecated "columnalign" attribute
+    to style <mtable> as "align" environment. Fixes rendering in Crome.
+  - Support "aligned" environment.
 
 * docutils/utils/roman.py
 
@@ -112,6 +115,10 @@ Changes since 0.20.1
 * docutils/writers/html4css1/__init__.py
 
   - Support video inclusion via `<object>` tags.
+
+* docutils/writers/html5_polyglot/*.css
+
+  - Move MathML styles to "minimal.css" (required for correct rendering).
 
 * docutils/writers/_html_base.py
 
